<resources>
    <string name="answer_tip">Tippe hier deine Antwort ein</string>
    <string name="app_name">Projekt</string>
    <string name="bewerte_nun">Bewerte nun %1$s</string>
    <string name="bewerte_nun2">Bewerte nun %1$s</string>
    <string name="bewertung_abgeben">Bewertung abgeben</string>
    <string name="conenct_to_game">Game Beitreten</string>
    <string name="connection">Verbindung zum Mitspieler</string>
    <string name="connection_explained">Hier kannst du dich mit deinem Mitspieler verbinden. Dafür brauchst du eine Verbindung via Chat zu deinem Mitspieler. Einer von euch beiden muss ein Game erstellen und die ID, die auf dem Bildschirm erscheint, dem Gegenüber zuschicken. Diese muss dann in das Text-Feld eingegeben werden. Dieses erscheint nur, wenn man auf Game Beitreten drückt.</string>
    <string name="continue_text">Weiter</string>
    <string name="continue_2">Fortsetzen</string>
    <string name="create_game">Game erstellen</string>
    <string name="culture">Erfahrung mit Kultur</string>
    <string name="culture_introduction">Nun ist eure Erfahrung mit der Kultur gefragt. Ihr habt nun etwas Zeit, um Geschichten zur Kultur zu erzählen. Diese werden dann im Anschluss von eurem Mitspieler bewertet.</string>
    <string name="explain_card">Als nächstes müsst ihr euch beide eine Lösung zum Problem auf der Ereigniskarte überlegen und dem Gegenüber vorstellen. Wenn ihr dies gemacht habt, klickt auf Weiter.</string>
    <string name="explain_to_wait">Es sieht so aus als wäre dein Mitspieler noch nicht bereit. Wenn dieser fertig ist, wird automatisch das Thema angezeigt.</string>
    <string name="here_is_card">Hier ist eure Ereignis Karte</string>
    <string name="id_input">ID Hier eingeben</string>
    <string name="intorduction_text_rating">Nachdem ihr nun beide Lösungen gehört habt und könnt ihr eine Punktevergabe von 1–5 Punkten vergeben, beide Spieler werden beginnend mit Spieler 1. Es werden nur ganze Sterne vergeben.</string>
    <string name="name1">Name Spieler 1</string>
    <string name="name2">Name Spieler 2</string>
    <string name="no_answer_from_player">Noch hat dein Mitspieler keine Lösung eingegeben</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="problem">Nun bekommt ihr ein offensichtliches und mögliches Problem. Du musst dir eine Lösung zu dieser Situation überlegen und in die Eingabefläche tippen, die im späteren Schritt erscheint.</string>
    <string name="request_answer">Warte auf Eingabe</string>
    <string name="start">Start</string>
    <string name="topic">Hier steht das Thema</string>
    <string name="topic_text">Euer Thema ist: %1$S</string>
    <string name="welcome">Willkommen bei KH2 Spielt</string>
    <string name="settings">Einstellung</string>
    <string name="no_name">Keine Name eingegeben</string>
    <string name="no_name_explained">Du musst einen Namen eingeben um spielen zu können</string>
    <string name="ok">Ok</string>
    <string name="no_topic">Keine Veranstaltung gewählt</string>
    <string name="no_topic_explained">Du musst mindestens eine Veranstaltung wählen um spielen zu können</string>
    <string name="no_answer">Keine Antwort abgegeben</string>
    <string name="no_answer_explained">Du musst eine Antwort abgeben um weier zu spielen.</string>
    <string name="no_rating">Keine Bewertung abgegeben</string>
    <string name="no_rating_explained">Du musst eine Bewertung abgeben um weier zu spielen.</string>
    <string name="lesung">Lesung</string>
    <string name="konzert">Konzert</string>
    <string name="performance">Performance</string>
    <string name="ausstellung">Ausstellung</string>
    <string name="theater">Theater</string>
    <string name="oper">Oper</string>
    <string name="culture_question">Wo kann man Kultur erleben?</string>
    <string name="culture_places">Wähle die Orte die du am meisten kennst oder magst</string>
    <string name="stage">Stufe %1$s</string>
    <string name="player_points">%1$s hat %2$s Punkte</string>
    <string name="Stage_text">Stufe %1$s</string>
    <string name="continue_game">weiterspielen</string>
    <string name="copyID">Kopiere ID</string>
    <string name="startGame">Game Starten</string>
    <string name="checkID">ID Prüfen</string>
    <string name="playernumber_Input">Spielernummer hier eingeben</string>
    <string name="wrongID">Falsche ID</string>
    <string name="wrongIDExplained">Die eingebene ID wurde nicht in der Datenbank gefunden. Prüfe ob diese korrekt ist und versuche es erneut</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="fragen_ausgewahlt">%1$s Fragen ausgewählt</string>
    <string name="you_win">You Win</string>
    <string name="Event_Card">Stell Dir vor du begenest deinem Alten Mathe Lehrer</string>
    <string name="culture_card">Was war das beste Theaterstück das du je gesehen hast</string>
</resources>