<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RatingBar
        android:id="@+id/ratingBewertung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundTint="#FDD835"
        android:indeterminateTint="#FDD835"
        android:progressTint="#FDD835"
        app:layout_constraintBottom_toTopOf="@+id/WeiterButtonBewertung"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInputVonMitspieler" />

    <TextView
        android:id="@+id/textViewBewertungErklärung"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/intorduction_text_rating"
        app:layout_constraintEnd_toEndOf="@+id/ratingBewertung"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ratingBewertung"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/WeiterButtonBewertung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:text="@string/request_answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewInputVonMitspieler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/no_answer_from_player"
        app:layout_constraintEnd_toEndOf="@+id/textViewBewertungErklärung"
        app:layout_constraintStart_toStartOf="@+id/textViewBewertungErklärung"
        app:layout_constraintTop_toBottomOf="@+id/textViewBewertungErklärung" />
</androidx.constraintlayout.widget.ConstraintLayout>