<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/second_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGray"
    android:visibility="visible">

    <EditText
        android:id="@+id/textName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/name1"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/gameStartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/grey"
        android:foreground="?selectableItemBackground"
        android:text="@string/continue_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/avatarImage"
        android:layout_width="147dp"
        android:layout_height="135dp"
        app:layout_constraintBottom_toTopOf="@+id/textName1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAccessibility="no" />

    <ImageButton
        android:id="@+id/nächsterAvatarR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/avatarImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatarImage"
        app:layout_constraintTop_toTopOf="@+id/avatarImage"
        app:srcCompat="@android:drawable/ic_media_play"
        android:importantForAccessibility="no" />

    <ImageButton
        android:id="@+id/nächsterAvatarL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotationX="0"
        android:rotationY="180"
        app:layout_constraintBottom_toBottomOf="@+id/avatarImage"
        app:layout_constraintEnd_toStartOf="@+id/avatarImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/avatarImage"
        app:srcCompat="@android:drawable/ic_media_play"
        android:importantForAccessibility="no" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:textOff="@string/online"
        android:textOn="@string/offline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName2"
        app:layout_constraintVertical_bias="0.109" />

    <EditText
        android:id="@+id/textName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name2"
        android:inputType="text"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textName1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textName1"
        app:layout_constraintTop_toBottomOf="@+id/textName1"
        app:layout_constraintVertical_bias="0.091"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/gespeicherteSpiele"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        app:layout_constraintBottom_toTopOf="@+id/avatarImage"
        app:layout_constraintEnd_toEndOf="@+id/nächsterAvatarL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51"
        app:srcCompat="@android:drawable/ic_dialog_map"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_2"
        app:layout_constraintEnd_toEndOf="@+id/gespeicherteSpiele"
        app:layout_constraintStart_toStartOf="@+id/gespeicherteSpiele"
        app:layout_constraintTop_toBottomOf="@+id/gespeicherteSpiele" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="160dp"
        android:layout_height="46dp"
        android:max="4"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameStartButton" />

    <TextView
        android:id="@+id/textViewQuestionCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameStartButton" />

</androidx.constraintlayout.widget.ConstraintLayout>